@@ -27,6 +27,7 @@ BUG FIXES:
 +Fix crash that could occur when iterating syntax globals during startup.
 +Fix issue with portable profiles not loading when install directory path changes.
 +Fix crash that could occur when tab menu handler is called with no context manager.
++Handle errors that can occur when adding items to file history.
 
 #-----------------------------------------------------------------------------#
 
